fix(apt): report only the cycle, not the DFS entry path
visit() previously copied the entire traversal path into the
detected cycle, so A→B→C→B was reported as A→B→C→B even though
A is not part of the loop. Slice the path from the neighbor's
own position instead, so only the cycle proper is emitted.

Path is now a List<EntityType> keyed on full names, which also
disambiguates entities that share a simple name.